--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.2.1"
+    "@astrojs/react": "^2.1.1",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
+    "astro": "^2.2.1",
+    "aws-amplify": "4.3.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
